[package]
name = "stock_middleware"
version = "0.1.0"
authors = ["shellcodesniper <shellcodesniper@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
colour = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.9.0"